@@ -75,7 +75,8 @@
 - UTF-8 combining characters don't work. store in one cell - pointer to table
   of chains. bit of a hack and would mean max of 65536 per screen. OR maybe
   utf8 should work differently; could store as multiple cells, 1 of width >0
-  and n of width 0, then translate cursor indexes on-the-fly
+  and n of width 0, then translate cursor indexes on-the-fly would need to
+  adjust all cursor movement and also handle different width lines properly.
 
 (hopefully) for 0.7, in no particular order:
 - swap-pane-up, swap-pane-down (maybe move-pane-*)
