@@ -1,3 +1,8 @@
+26 January 2009
+
+* Don't balls up the terminal on UTF-8 combined characters. Don't support them
+  properly either - they are just discarded for the moment.
+
 25 January 2009
 
 * load-buffer command
@@ -1008,7 +1013,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.234 2009-01-25 19:00:10 tcunha Exp $
+$Id: CHANGES,v 1.235 2009-01-26 20:57:42 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
